Add an endpoint to return a CollectionVersion's resolved dependencies - Notes conflicts in returned dictionary Issue: AAH-8
