# galaxy_ng/app/api/v3/urls.py
@@ -52,6 +52,11 @@ urlpatterns = [
         name='collection-versions-detail',
     ),
     path(
+        'collections/<str:namespace>/<str:name>/versions/<str:version>/dependencies/',
+        viewsets.CollectionVersionDependencyViewSet.as_view({'get': 'retrieve'}),
+        name='collection-versions-dependency',
+    ),
+    path(
         'collections/<str:namespace>/<str:name>/versions/<str:version>/docs-blob/',
         viewsets.CollectionVersionDocsViewSet.as_view({'get': 'retrieve'}),
         name='collection-versions-detail-docs',
